--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -19,6 +19,7 @@ jobs:
         name: hello-artifact
         path: hello.txt
   download:
+     needs: build
      runs-on: ubuntu-latest
      steps:
      - name: Download text file
@@ -31,5 +32,6 @@ jobs:
         cat ./artifacts/hello.txt
      
   
+
 
 
