--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -27,11 +27,11 @@ jobs:
        with:
          name: hello-artifact
          path: ./artifacts
-     - run: |
-        cat hello.txt
-        cat ./artifacts/hello.txt
+     - name: Display the file
+       run: cat ./artifacts/hello.txt
      
   
+
 
 
 
